@@ -22,8 +22,8 @@ package org.apache.cayenne.dba;
 import org.apache.cayenne.access.DataNode;
 import org.apache.cayenne.access.jdbc.SQLTemplateAction;
 import org.apache.cayenne.di.Inject;
-import org.apache.cayenne.di.Provider;
 import org.apache.cayenne.log.NoopJdbcEventLogger;
+import org.apache.cayenne.query.ObjectSelect;
 import org.apache.cayenne.query.SQLTemplate;
 import org.apache.cayenne.testdo.testmap.Artist;
 import org.apache.cayenne.unit.di.server.CayenneProjects;
@@ -31,11 +31,10 @@ import org.apache.cayenne.unit.di.server.ServerCase;
 import org.apache.cayenne.unit.di.server.UseServerRuntime;
 import org.junit.Test;
 
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertSame;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 @UseServerRuntime(CayenneProjects.TESTMAP_PROJECT)
 public class AutoAdapterIT extends ServerCase {
@@ -44,31 +43,72 @@ public class AutoAdapterIT extends ServerCase {
     private DataNode dataNode;
 
     @Test
-    public void testGetAdapter_Proxy() throws Exception {
-        Provider<DbAdapter> adapterProvider = mock(Provider.class);
-        when(adapterProvider.get()).thenReturn(dataNode.getAdapter());
-
-        AutoAdapter adapter = new AutoAdapter(adapterProvider, NoopJdbcEventLogger.getInstance());
+    public void testGetAdapter_Proxy() {
+        AutoAdapter adapter = new AutoAdapter(() -> dataNode.getAdapter(), NoopJdbcEventLogger.getInstance());
         DbAdapter detected = adapter.getAdapter();
         assertSame(dataNode.getAdapter(), detected);
     }
 
     @Test
     public void testCreateSQLTemplateAction() {
-
-        Provider<DbAdapter> adapterProvider = mock(Provider.class);
-        when(adapterProvider.get()).thenReturn(dataNode.getAdapter());
-
-        AutoAdapter autoAdapter = new AutoAdapter(adapterProvider, NoopJdbcEventLogger.getInstance());
+        AutoAdapter autoAdapter = new AutoAdapter(() -> dataNode.getAdapter(), NoopJdbcEventLogger.getInstance());
 
         SQLTemplateAction action = (SQLTemplateAction) autoAdapter.getAction(new SQLTemplate(Artist.class,
                 "select * from artist"), dataNode);
 
-        // it is important for SQLTemplateAction to be used with unwrapped
-        // adapter, as the
-        // adapter class name is used as a key to the correct SQL template.
+        // it is important for SQLTemplateAction to be used with unwrapped adapter,
+        // as the adapter class name is used as a key to the correct SQL template.
         assertNotNull(action.getAdapter());
         assertFalse(action.getAdapter() instanceof AutoAdapter);
         assertSame(dataNode.getAdapter(), action.getAdapter());
+    }
+
+    @Test
+    public void testCorrectProxyMethods() {
+        DbAdapter adapter = dataNode.getAdapter();
+        AutoAdapter autoAdapter = new AutoAdapter(() -> adapter, NoopJdbcEventLogger.getInstance());
+
+        ObjectSelect<Artist> select = ObjectSelect.query(Artist.class);
+
+        // query related methods
+        assertEquals(adapter.supportsBatchUpdates(),
+                autoAdapter.supportsBatchUpdates());
+        assertEquals(adapter.supportsGeneratedKeys(),
+                autoAdapter.supportsGeneratedKeys());
+        assertEquals(adapter.supportsGeneratedKeysForBatchInserts(),
+                autoAdapter.supportsGeneratedKeysForBatchInserts());
+        assertSame(adapter.getBatchTerminator(),
+                autoAdapter.getBatchTerminator());
+        assertSame(adapter.getPkGenerator(),
+                autoAdapter.getPkGenerator());
+        assertSame(adapter.getQuotingStrategy(),
+                autoAdapter.getQuotingStrategy());
+        // returns a new instance for each call
+        assertSame(adapter.getSqlTreeProcessor().getClass(),
+                autoAdapter.getSqlTreeProcessor().getClass());
+        assertSame(adapter.getExtendedTypes(),
+                autoAdapter.getExtendedTypes());
+        assertSame(adapter.getEjbqlTranslatorFactory(),
+                autoAdapter.getEjbqlTranslatorFactory());
+        // returns a new instance for each call
+        assertSame(adapter.getSelectTranslator(select, dataNode.getEntityResolver()).getClass(),
+                autoAdapter.getSelectTranslator(select, dataNode.getEntityResolver()).getClass());
+
+
+        // reverse engineering related methods
+        assertEquals(adapter.supportsCatalogsOnReverseEngineering(),
+                autoAdapter.supportsCatalogsOnReverseEngineering());
+        assertSame(adapter.getSystemCatalogs(),
+                autoAdapter.getSystemCatalogs());
+        assertSame(adapter.getSystemSchemas(),
+                autoAdapter.getSystemSchemas());
+        assertSame(adapter.tableTypeForTable(),
+                autoAdapter.tableTypeForTable());
+        assertSame(adapter.tableTypeForView(),
+                autoAdapter.tableTypeForView());
+
+        // db generation related methods
+        assertEquals(adapter.supportsUniqueConstraints(),
+                autoAdapter.supportsUniqueConstraints());
     }
 }
